--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -4,8 +4,10 @@ add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-SET(GLFW_FLAGS "-lglfw3 -lGL -lX11 -lpthread -lXrandr -lXi -ldl")
-add_definitions(${GLFW_FLAGS})
+if(LINUX)
+    SET(GLFW_FLAGS "-lglfw3 -lGL -lX11 -lpthread -lXrandr -lXi -ldl")
+    add_definitions(${GLFW_FLAGS})
+endif(LINUX)
 
 SET(EDITOR_FOLDER ${CMAKE_CURRENT_SOURCE_DIR})
 message(STATUS "Generating project file for example in ${EXAMPLE_FOLDER}")
