--- a/src/byond/CMakeLists.txt
+++ b/src/byond/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(byond-core SHARED
 if(NOT TARGET spdlog)
     # Stand-alone build
     SET(spdlog_DIR "../third_party/spdlog")
-    include_directories("../third_party/spdlog/include")
+    include_directories("../third_party/spdlog/include","../third_party/spdlog/src")
 endif()
 
 
@@ -17,7 +17,7 @@ set_target_properties(byond-core PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(byond-core PROPERTIES PUBLIC_HEADER library.h)
 
 target_include_directories(byond-core PRIVATE .)
-target_include_directories(byond-core PRIVATE "../third_party/color/src", "../third_party/spdlog/src")
+target_include_directories(byond-core PRIVATE "../third_party/color/src")
 
 target_link_libraries(byond-core PRIVATE)
 
