--- a/src/byond/CMakeLists.txt
+++ b/src/byond/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 project(byond-core VERSION 1.0.0 DESCRIPTION "BYOND DME Core")
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(byond-core SHARED
     library.cpp
@@ -8,8 +10,8 @@ add_library(byond-core SHARED
 
 if(NOT TARGET spdlog)
     # Stand-alone build
-    SET(spdlog_DIR "../third_party/spdlog")
-    include_directories("../third_party/spdlog/include","../third_party/spdlog/src")
+    SET(spdlog_DIR "../../third_party/spdlog")
+    include_directories("../../third_party/spdlog/include","../../third_party/spdlog/src")
 endif()
 
 
@@ -17,9 +19,8 @@ set_target_properties(byond-core PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(byond-core PROPERTIES PUBLIC_HEADER library.h)
 
 target_include_directories(byond-core PRIVATE .)
-target_include_directories(byond-core PRIVATE "../third_party/color/src")
+target_include_directories(byond-core PRIVATE "../../third_party/color/src" "../byond")
 
-target_link_libraries(byond-core PRIVATE)
 
 install(TARGETS byond-core 
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
